[metadata]
name = dbus-objects
version = 0.0.2
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@archlinux.org
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
project_urls =
    homepage = https://github.com/FFY00/dbus-objects
    changelog = https://github.com/FFY00/dbus-objects/blob/master/CHANGELOG.rst

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    treelib
    typing_extensions ; python_version < '3.9'

[options.packages.find]
exclude = tests

[options.extras_require]
jeepney =
    jeepney >= 0.5
test =
    pytest
    pytest-subtests
    pytest-cov
    pytest-trio
    jeepney >= 0.5
    trio
    xmldiff
docs =
    furo>=2021.08.31
    sphinx==4.*
    sphinx-autodoc-typehints
    jeepney

[flake8]
max-line-length = 127
max-complexity = 10
min-python-version = 3.7.0
extend-ignore = B011

[mypy]
ignore_missing_imports = True
strict = True

[isort]
line_length = 127
lines_between_types = 1
lines_after_imports = 2
known_first_party = dbus_objects

[coverage:run]
omit =
    setup.py

[coverage:paths]
source =
    src
    */site-packages
    *\site-packages
